Add unenclose function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@ export("%<a-%")
 export("%<d-%")
 export(make_function)
 export(substitute2)
+export(unenclose)
 export(uneval)
 export(where)
 useDynLib(pryr)
