--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,9 +1,15 @@
 export("%<a-%")
 export("%<d-%")
+export(call_tree)
 export(make_function)
 export(rebind)
 export(substitute2)
 export(unenclose)
 export(uneval)
 export(where)
+importFrom(stringr,str_c)
+importFrom(stringr,str_dup)
+importFrom(stringr,str_length)
+importFrom(stringr,str_sub)
+importFrom(testthat,colourise)
 useDynLib(pryr)
