Add modify lang

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@ export("%<a-%")
 export("%<d-%")
 export(call_tree)
 export(make_function)
+export(modify_lang)
 export(rebind)
 export(substitute2)
 export(unenclose)
