--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(call_tree)
 export(make_function)
 export(modify_lang)
 export(rebind)
+export(subs)
 export(substitute2)
 export(unenclose)
 export(uneval)
