Add f, a compact syntax for anonymous funs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@ export("%<c-%")
 export("%<d-%")
 export(call_tree)
 export(curry)
+export(f)
 export(make_function)
 export(modify_lang)
 export(rebind)
