--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,9 @@ export("%<d-%")
 export(call_tree)
 export(curry)
 export(f)
+export(find_funs)
+export(fun_args)
+export(fun_calls)
 export(make_function)
 export(modify_lang)
 export(rebind)
