Add rls from Winston

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(fun_calls)
 export(make_function)
 export(modify_lang)
 export(rebind)
+export(rls)
 export(subs)
 export(substitute2)
 export(unenclose)
