Add parenv & to_env functions. And be more consistent about how functions accept environments

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(fun_args)
 export(fun_calls)
 export(make_function)
 export(modify_lang)
+export(parenv)
 export(rebind)
 export(rls)
 export(subs)
