Rename curry to partial. And provide a better implementation that is closer to a hand written anonymous function

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,8 +25,8 @@ Collate:
     'modify-lang.r'
     'subs.r'
     'assign-constant.r'
-    'curry.r'
     'f.r'
     'find-funs.r'
     'rls.r'
     'parenv.r'
+    'partial.r'
