--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,6 @@ export("%<a-%")
 export("%<c-%")
 export("%<d-%")
 export(call_tree)
-export(curry)
 export(f)
 export(find_funs)
 export(fun_args)
@@ -10,6 +9,7 @@ export(fun_calls)
 export(make_function)
 export(modify_lang)
 export(parenv)
+export(partial)
 export(rebind)
 export(rls)
 export(subs)
