Start on function composition

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,7 +1,9 @@
+export("%.%")
 export("%<a-%")
 export("%<c-%")
 export("%<d-%")
 export(call_tree)
+export(compose)
 export(f)
 export(find_funs)
 export(fun_args)
