--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(compose)
 export(f)
 export(find_funs)
 export(fun_args)
+export(fun_body)
 export(fun_calls)
 export(make_function)
 export(modify_lang)
