Capture unevaluated dots

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%<c-%")
 export("%<d-%")
 export(call_tree)
 export(compose)
+export(dots)
 export(f)
 export(find_funs)
 export(fun_args)
@@ -11,6 +12,7 @@ export(fun_body)
 export(fun_calls)
 export(make_function)
 export(modify_lang)
+export(named_dots)
 export(parenv)
 export(partial)
 export(rebind)
