--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,11 +10,13 @@ export(find_funs)
 export(fun_args)
 export(fun_body)
 export(fun_calls)
+export(is_promise)
 export(make_function)
 export(modify_lang)
 export(named_dots)
 export(parenv)
 export(partial)
+export(promise_info)
 export(rebind)
 export(rls)
 export(subs)
