Function for monitoring copies

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(rebind)
 export(rls)
 export(subs)
 export(substitute2)
+export(track_copy)
 export(unenclose)
 export(uneval)
 export(where)
