--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(rls)
 export(subs)
 export(substitute2)
 export(track_copy)
+export(typename)
 export(unenclose)
 export(uneval)
 export(where)
