--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(typename)
 export(unenclose)
 export(uneval)
 export(where)
+importFrom(codetools,findGlobals)
 importFrom(stringr,str_c)
 importFrom(stringr,str_dup)
 importFrom(stringr,str_length)
