Technique to find parent promise in chain

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(is_promise)
 export(make_function)
 export(modify_lang)
 export(named_dots)
+export(parent_promise)
 export(parenv)
 export(partial)
 export(promise_info)
