Add ftype and otype

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,13 +9,16 @@ export(dots)
 export(f)
 export(fget)
 export(find_funs)
+export(ftype)
 export(fun_args)
 export(fun_body)
 export(fun_calls)
 export(is_promise)
+export(is_s3_generic)
 export(make_function)
 export(modify_lang)
 export(named_dots)
+export(otype)
 export(parent_promise)
 export(parenv)
 export(partial)
@@ -30,6 +33,7 @@ export(unenclose)
 export(uneval)
 export(where)
 importFrom(codetools,findGlobals)
+importFrom(methods,is)
 importFrom(stringr,str_c)
 importFrom(stringr,str_dup)
 importFrom(stringr,str_length)
