Function to get S4 method from call

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(fun_calls)
 export(is_promise)
 export(is_s3_generic)
 export(make_function)
+export(method_from_call)
 export(modify_lang)
 export(named_dots)
 export(otype)
