Add refs function. Integrate inspect functions in one file

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,10 +39,10 @@ Collate:
     'compose.r'
     'dots.r'
     'RcppExports.R'
-    'address.r'
     'typename.r'
     'ftype.r'
     's3.r'
     'otype.r'
     'method-from-call.r'
     'standardise-call.r'
+    'inspect.r'
