--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(parenv)
 export(partial)
 export(promise_info)
 export(rebind)
+export(refs)
 export(rls)
 export(subs)
 export(substitute2)
