--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(promise_info)
 export(rebind)
 export(refs)
 export(rls)
+export(standardise_call)
 export(subs)
 export(substitute2)
 export(track_copy)
