--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(fun_body)
 export(fun_calls)
 export(is_promise)
 export(is_s3_generic)
+export(is_s3_method)
 export(make_function)
 export(method_from_call)
 export(modify_lang)
