--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(is_s3_generic)
 export(is_s3_method)
 export(make_function)
 export(method_from_call)
+export(modify_call)
 export(modify_lang)
 export(named_dots)
 export(otype)
