--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,5 +18,6 @@ Imports:
     codetools,
     methods,
     Rcpp (>= 0.11.0)
-Suggests: testthat (>= 0.8.0)
+Suggests:
+    testthat (>= 0.8.0)
 Roxygen: list(wrap = FALSE)
