--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,7 +35,7 @@ export(refs)
 export(rls)
 export(standardise_call)
 export(subs)
-export(substitute2)
+export(substitute_q)
 export(track_copy)
 export(typename)
 export(unenclose)
