Add bits, bytes for getting internal representation of values

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export("%<c-%")
 export("%<d-%")
 export(address)
 export(ast)
+export(bits)
+export(bytes)
 export(call_tree)
 export(compose)
 export(dots)
