Find internal C source code.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(method_from_call)
 export(modify_call)
 export(modify_lang)
 export(named_dots)
+export(names_c)
 export(otype)
 export(parent_promise)
 export(parenv)
@@ -35,6 +36,7 @@ export(promise_info)
 export(rebind)
 export(refs)
 export(rls)
+export(show_c_source)
 export(standardise_call)
 export(subs)
 export(substitute_q)
