Extract sexp_type function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(promise_info)
 export(rebind)
 export(refs)
 export(rls)
+export(sexp_type)
 export(show_c_source)
 export(standardise_call)
 export(subs)
