Add mem_change function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(is_promise)
 export(is_s3_generic)
 export(is_s3_method)
 export(make_function)
+export(mem_change)
 export(mem_used)
 export(method_from_call)
 export(modify_call)
