Take into account current environment

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(ast)
 export(bits)
 export(bytes)
 export(call_tree)
+export(compare_size)
 export(compose)
 export(dots)
 export(f)
@@ -30,6 +31,7 @@ export(modify_call)
 export(modify_lang)
 export(named_dots)
 export(names_c)
+export(object_size)
 export(otype)
 export(parent_promise)
 export(parenv)
