More convenient make_call and do_call functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(bytes)
 export(call_tree)
 export(compare_size)
 export(compose)
+export(do_call)
 export(dots)
 export(f)
 export(fget)
@@ -24,6 +25,7 @@ export(fun_calls)
 export(is_promise)
 export(is_s3_generic)
 export(is_s3_method)
+export(make_call)
 export(make_function)
 export(mem_change)
 export(mem_used)
