Add enclosing env function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(compare_size)
 export(compose)
 export(do_call)
 export(dots)
+export(enclosing_env)
 export(f)
 export(fget)
 export(find_funs)
