Start on new inspect function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,8 @@
 S3method("[",envlist)
 S3method(print,bytes)
 S3method(print,envlist)
+S3method(print,inspect)
+S3method(print,inspect_NILSXP)
 export("%.%")
 export("%<a-%")
 export("%<c-%")
@@ -26,6 +28,7 @@ export(ftype)
 export(fun_args)
 export(fun_body)
 export(fun_calls)
+export(inspect)
 export(is_promise)
 export(is_s3_generic)
 export(is_s3_method)
