Explicit promise approach to NSE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,8 @@ export(compose)
 export(do_call)
 export(dots)
 export(enclosing_env)
+export(eval2)
+export(explicit)
 export(f)
 export(fget)
 export(find_funs)
