Remove roxygen field. Correct capitalisation of URL

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Authors@R: c(
     person("R Core team", role = "ctb",
     comment = "Some code extracted from base R"))
 License: GPL-2
-Url: https://github.com/hadley/pryr
+URL: https://github.com/hadley/pryr
 BugReports: https://github.com/hadley/pryr/issues
 Version: 0.1
 LinkingTo: Rcpp
@@ -20,4 +20,3 @@ Imports:
     Rcpp (>= 0.11.0)
 Suggests:
     testthat (>= 0.8.0)
-Roxygen: list(wrap = FALSE)
