--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,8 @@ URL: https://github.com/hadley/pryr
 BugReports: https://github.com/hadley/pryr/issues
 Version: 0.1
 LinkingTo: Rcpp
+Depends:
+    R (>= 3.1.0)
 Imports:
     stringr,
     codetools,
