--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,16 @@
-Type: Package
 Package: pryr
-Title: Tools for computing on the language
+Version: 0.1.1
+Title: Tools for Computing on the Language
 Description: Useful tools to pry back the covers of R and understand the
     language at a deeper level.
 Authors@R: c(
-    person("Hadley", "Wickham",
-    email = "h.wickham@gmail.com", role = c("aut", "cre")),
+    person("Hadley", "Wickham", ,"hadley@rstudio.com", c("aut", "cre")),
     person("R Core team", role = "ctb",
-    comment = "Some code extracted from base R"))
+      comment = "Some code extracted from base R")
+    )
 License: GPL-2
 URL: https://github.com/hadley/pryr
 BugReports: https://github.com/hadley/pryr/issues
-Version: 0.1.1
 LinkingTo: Rcpp
 Depends:
     R (>= 3.1.0)
