Make dependencies on base packages explicit

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,6 +66,7 @@ export(uneval)
 export(where)
 importFrom(Rcpp,sourceCpp)
 importFrom(codetools,findGlobals)
+importFrom(methods,getGroupMembers)
 importFrom(methods,is)
 importFrom(stringr,str_c)
 importFrom(stringr,str_dup)
