Use modern Travis config with multiple platforms

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,16 @@
-# Sample .travis.yml for R projects
+# R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
 language: r
-warnings_are_errors: true
-sudo: required
+sudo: false
+cache: packages
 
-r_github_packages:
-  - jimhester/covr
+matrix:
+  include:
+    - r: 3.1
+    - r: oldrel
+    - r: release
+      env: R_CODECOV=true
+    - r: devel
+
 after_success:
-  - Rscript -e 'covr::codecov()'
-
-env:
- global:
-   - CRAN: http://cran.rstudio.com
-
-notifications:
-  email:
-    on_success: change
-    on_failure: change
+  - if [[ "${R_CODECOV}" ]]; then R -e 'covr::codecov()'; fi
